FEAT: rendezős gombok létrehozva
mindegyik oszlopot tudjuk rendezni egy gombnyomással

--- a/index.html
+++ b/index.html
@@ -200,7 +200,9 @@
         </div>
       </div>
 
-      <button id="sort-btn">Rendezés</button>
+      <button id="sort-btn">Rendezés KÓD szerint</button>
+      <button id="srt-btn">Rendezés NÉV szerint</button>
+      <button id="sort-button">Rendezés KULCS szerint</button>
 
       <div>
         <h1>Ausztriai bajnokság!</h1>
@@ -212,9 +214,9 @@
             <thead>
               <tr>
                 <th>#</th>
-                <th>key</th>
-                <th>name</th>
-                <th>code</th>
+                <th>Kulcs</th>
+                <th>Név</th>
+                <th>Kód</th>
                 <th></th>
               </tr>
             </thead>
